// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tabs default 1`] = `
<div
  className="sc-ksYbfQ LEWSK"
>
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl cIlnlJ"
  >
    <div
      className="sc-iwsKbI hAZHJM"
    >
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT gAVdMk"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          First
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT lasyon"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Second
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT gAVdMk"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Third
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT jsibEm"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="sc-bdVaJa bDWFJH"
    >
      Content of the second tab
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs one item 1`] = `
<div
  className="sc-ksYbfQ LEWSK"
>
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl cIlnlJ"
  >
    <div
      className="sc-iwsKbI hAZHJM"
    >
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT lasyon"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Active
        </span>
      </button>
    </div>
    <div
      className="sc-bdVaJa bDWFJH"
    >
      Content of active tab
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs rounded 1`] = `
<div
  className="sc-ksYbfQ LEWSK"
>
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl bjiDuV"
  >
    <div
      className="sc-iwsKbI hAZHJM"
    >
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT jlFRxx"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          First
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT hdMFah"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Second
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT jlFRxx"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Third
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT iogkYq"
        disabled={true}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="sc-bdVaJa bDWFJH"
    >
      Content of the second tab
    </div>
  </div>
</div>
`;

exports[`Storyshots Tabs with icon 1`] = `
<div
  className="sc-ksYbfQ LEWSK"
>
  <div
    className="sc-TOsTZ kjYrri sc-cHGsZl bjiDuV"
  >
    <div
      className="sc-iwsKbI hAZHJM"
    >
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT hdMFah"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          <span>
            <svg
              height="1.5rem"
              preserveAspectRatio="xMidYMid meet"
              version="1.1"
              viewBox="0 0 70 70"
              width="1.5rem"
            >
              <g
                fill={undefined}
                fillRule="evenodd"
                id="Page-1"
                stroke="none"
                strokeWidth="1"
              >
                <path
                  d="M70,41.426 L70,28.574 L58.447,28.574 C57.908,26.588 57.128,24.706 56.131,22.957 L64.294,14.794 L55.206,5.706 L47.039,13.869 C45.29,12.872 43.408,12.092 41.426,11.549 L41.426,0 L28.574,0 L28.574,11.549 C26.592,12.092 24.706,12.872 22.956,13.869 L14.793,5.706 L5.705,14.794 L13.868,22.957 C12.87,24.706 12.091,26.588 11.548,28.574 L0,28.574 L0,41.426 L11.549,41.426 C12.092,43.412 12.872,45.294 13.869,47.043 L5.706,55.206 L14.794,64.29 L22.957,56.131 C24.707,57.128 26.588,57.908 28.575,58.451 L28.575,70 L41.427,70 L41.427,58.451 C43.409,57.908 45.295,57.128 47.045,56.131 L55.208,64.29 L64.296,55.206 L56.133,47.043 C57.131,45.294 57.91,43.412 58.449,41.426 L70,41.426 L70,41.426 Z M35,47.711 C27.979,47.711 22.289,42.021 22.289,35 C22.289,27.979 27.979,22.289 35,22.289 C42.017,22.289 47.711,27.979 47.711,35 C47.711,42.021 42.017,47.711 35,47.711 Z"
                  id="Shape"
                />
              </g>
            </svg>
             First
          </span>
        </span>
      </button>
      <button
        className="sc-cJSrbW dLwzxs sc-kgAjT jlFRxx"
        disabled={undefined}
        onClick={[Function]}
      >
        <span
          className="sc-dnqmqq bDsesi"
        >
          <span>
            <svg
              height="1.5rem"
              preserveAspectRatio="xMidYMid meet"
              version="1.1"
              viewBox="0 0 70 70"
              width="1.5rem"
            >
              <g
                fill={undefined}
                fillRule="evenodd"
                id="Page-1"
                stroke="none"
                strokeWidth="1"
              >
                <path
                  d="M70,41.426 L70,28.574 L58.447,28.574 C57.908,26.588 57.128,24.706 56.131,22.957 L64.294,14.794 L55.206,5.706 L47.039,13.869 C45.29,12.872 43.408,12.092 41.426,11.549 L41.426,0 L28.574,0 L28.574,11.549 C26.592,12.092 24.706,12.872 22.956,13.869 L14.793,5.706 L5.705,14.794 L13.868,22.957 C12.87,24.706 12.091,26.588 11.548,28.574 L0,28.574 L0,41.426 L11.549,41.426 C12.092,43.412 12.872,45.294 13.869,47.043 L5.706,55.206 L14.794,64.29 L22.957,56.131 C24.707,57.128 26.588,57.908 28.575,58.451 L28.575,70 L41.427,70 L41.427,58.451 C43.409,57.908 45.295,57.128 47.045,56.131 L55.208,64.29 L64.296,55.206 L56.133,47.043 C57.131,45.294 57.91,43.412 58.449,41.426 L70,41.426 L70,41.426 Z M35,47.711 C27.979,47.711 22.289,42.021 22.289,35 C22.289,27.979 27.979,22.289 35,22.289 C42.017,22.289 47.711,27.979 47.711,35 C47.711,42.021 42.017,47.711 35,47.711 Z"
                  id="Shape"
                />
              </g>
            </svg>
             Second
          </span>
        </span>
      </button>
    </div>
    <div
      className="sc-bdVaJa bDWFJH"
    >
      Content of the first tab
    </div>
  </div>
</div>
`;
